data/forge_javadoc/1.7.10/processed/net_minecraft_world_gen_structure_StructureStrongholdPieces.LeftTurn.md
# StructureStrongholdPieces.LeftTurn

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureStrongholdPieces.Stronghold → net.minecraft.world.gen.structure.StructureStrongholdPieces.LeftTurn

## Class signature

```java
public static class StructureStrongholdPieces.LeftTurn extends StructureStrongholdPieces.Stronghold
```

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `void buildComponent(StructureComponent p_74861_1_, java.util.List p_74861_2_, java.util.Random p_74861_3_)`
- `static StructureStrongholdPieces.LeftTurn findValidPlacement(java.util.List p_75010_0_, java.util.Random p_75010_1_, int p_75010_2_, int p_75010_3_, int p_75010_4_, int p_75010_5_, int p_75010_6_)`

## Fields

- `LeftTurn`
- `LeftTurn`