data/forge_javadoc/1.8.9/processed/net_minecraft_world_gen_structure_StructureStrongholdPieces.LeftTurn.md
# StructureStrongholdPieces.LeftTurn

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureStrongholdPieces.Stronghold → net.minecraft.world.gen.structure.StructureStrongholdPieces.LeftTurn

## Class signature

```java
public static class StructureStrongholdPieces.LeftTurn extends StructureStrongholdPieces.Stronghold
```

## Methods

- `boolean addComponentParts(World worldIn, java.util.Random randomIn, StructureBoundingBox structureBoundingBoxIn)` — second Part of Structure generating, this for example places Spiderwebs, Mob Spawners, it closes Mineshafts at the end, it adds Fences...
- `void buildComponent(StructureComponent componentIn, java.util.List<StructureComponent> listIn, java.util.Random rand)` — Initiates construction of the Structure Component picked, at the current Location of StructGen
- `static StructureStrongholdPieces.LeftTurn func_175867_a(java.util.List<StructureComponent> p_175867_0_, java.util.Random p_175867_1_, int p_175867_2_, int p_175867_3_, int p_175867_4_, EnumFacing p_175867_5_, int p_175867_6_)`

## Fields

- `LeftTurn`
- `LeftTurn`